# csv_mcp

./: README.md  evaluation.xml  hello.py  pyproject.toml  server.py  test_data.csv  wine.csv
